sqitch: setup sane configuration
Assumes an existing testing database named beeeon_test and a production
database named beeeon. To make it working, you need:

* install postgresql and initialize it
* create role for your unix account (CREATE ROLE myusername)
* create database from shell: createdb beeeon_test or createdb beeeon

Sqitch automatically verifies the database state on deploy and rebase
operations.

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -6,3 +6,13 @@
 	# target = db:pg:
 	# registry = sqitch
 	# client = psql
+[engine "pg"]
+	target = beeeon_test
+[target "beeeon_test"]
+	uri = db:pg:beeeon_test
+[target "beeeon"]
+	uri = db:pg:beeeon
+[deploy]
+	verify = true
+[rebase]
+	verify = true
