api: define query devices.fetch.active.by.gateway.with.prefix
Signed-off-by: Jozef Halaj <xhalaj03@stud.fit.vutbr.cz>
Acked-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -50,6 +50,7 @@ devices.update             = SELECT beeeon.devices_update($8::numeric, $9::bigin
 devices.fetch.from.gateway = SELECT * FROM beeeon.devices_by_id_and_gateway($1::numeric, $2::bigint)
 devices.fetch.active.by.gateway   = SELECT * FROM beeeon.devices_active_by_gateway($1::bigint)
 devices.fetch.inactive.by.gateway = SELECT * FROM beeeon.devices_inactive_by_gateway($1::bigint)
+devices.fetch.active.by.gateway.with.prefix = SELECT * FROM beeeon.devices_active_by_idrange_and_gateway($1::bigint, $2::numeric(20, 0), $3::numeric(20, 0))
 
 devices_properties.insert  = SELECT beeeon.device_properties_insert($1::bigint, $2::bigint, $3::smallint, $4::text, $5::text)
 devices_properties.update  = SELECT beeeon.device_properties_update($3::numeric, $4::bigint, $5::smallint, $1::text, $2::text)
