--- a/server-queries.ini
+++ b/server-queries.ini
@@ -24,6 +24,7 @@ verified_identities.create         = SELECT beeeon.verified_identities_insert($1
 verified_identities.fetch.by.id    = SELECT * FROM beeeon.verified_identities_by_id($1::uuid)
 verified_identities.fetch.by.email.and.provider = SELECT * FROM beeeon.verified_identities_by_email_and_provider($1::varchar, $2::varchar)
 verified_identities.fetch.by.email = SELECT * FROM beeeon.verified_identities_by_email($1::varchar)
+verified_identities.fetch.by.user  = SELECT * FROM beeeon.verified_identities_by_user($1::uuid)
 verified_identities.update         = SELECT beeeon.verified_identities_update($1::uuid, $2::varchar, $3::varchar)
 verified_identities.remove         = SELECT beeeon.verified_identities_remove($1::uuid)
 
