beeeon: implement legacy_roles_in_gateway_by_id

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -43,6 +43,7 @@ roles_in_gateway.can.see.verified_identity = SELECT beeeon.roles_in_gateway_can_
 roles_in_gateway.fetch.access_level  = SELECT beeeon.roles_in_gateway_access_level($1::bigint, $2::uuid)
 roles_in_gateway.fetch.accessible.gateways = SELECT * FROM beeeon.roles_in_gateway_accessible_gateways($1::integer, $2::uuid)
 
+legacy_roles_in_gateway.fetch.by.id = SELECT * FROM beeeon.legacy_roles_in_gateway_by_id($1::uuid)
 legacy_roles_in_gateway.fetch.by.gateway_id = SELECT * FROM beeeon.legacy_roles_in_gateway_by_gateway($1::bigint)
 
 legacy_gateways.fetch.by.id = SELECT * FROM beeeon.legacy_gateways_by_id($1::uuid, $2::bigint)
