--- a/server-queries.ini
+++ b/server-queries.ini
@@ -15,6 +15,8 @@ locations.remove          = SELECT beeeon.locations_remove($1::uuid)
 users.create              = SELECT beeeon.users_insert ($1::uuid, $2::varchar, $3::varchar, '')
 users.fetch.by.id         = SELECT * FROM beeeon.users_by_id($1::uuid)
 
+fcm_tokens.create           = SELECT beeeon.fcm_tokens_insert($1::varchar, $2::uuid)
+
 identities.create         = SELECT beeeon.identities_insert($1::uuid, $2::varchar)
 identities.fetch.by.id    = SELECT * FROM beeeon.identities_by_id($1::uuid)
 identities.fetch.by.email = SELECT * FROM beeeon.identities_by_email($1::varchar)
