--- a/server-queries.ini
+++ b/server-queries.ini
@@ -16,6 +16,7 @@ users.create              = SELECT beeeon.users_insert ($1::uuid, $2::varchar, $
 users.fetch.by.id         = SELECT * FROM beeeon.users_by_id($1::uuid)
 
 fcm_tokens.create           = SELECT beeeon.fcm_tokens_insert($1::varchar, $2::uuid)
+fcm_tokens.remove           = SELECT beeeon.fcm_tokens_remove($1::varchar)
 
 identities.create         = SELECT beeeon.identities_insert($1::uuid, $2::varchar)
 identities.fetch.by.id    = SELECT * FROM beeeon.identities_by_id($1::uuid)
