--- a/server-queries.ini
+++ b/server-queries.ini
@@ -17,6 +17,7 @@ users.fetch.by.id         = SELECT * FROM beeeon.users_by_id($1::uuid)
 
 fcm_tokens.create           = SELECT beeeon.fcm_tokens_insert($1::varchar, $2::uuid)
 fcm_tokens.remove           = SELECT beeeon.fcm_tokens_remove($1::varchar)
+fcm_tokens.replace          = SELECT beeeon.fcm_tokens_replace($1::varchar, $2::varchar)
 
 identities.create         = SELECT beeeon.identities_insert($1::uuid, $2::varchar)
 identities.fetch.by.id    = SELECT * FROM beeeon.identities_by_id($1::uuid)
