beeeon: implement controls_recent_state
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -70,3 +70,5 @@ devices_properties.fetch.by.device = SELECT * FROM beeeon.device_properties_by_d
 sensors_history.insert = SELECT beeeon.sensor_history_recent_insert($1::bigint, beeeon.to_device_id($2::numeric(20, 0)), $3::smallint, to_timestamp($4), $5)
 sensors_history.fetch = SELECT * FROM beeeon.sensor_history_last_value($1::bigint, $2::numeric(20, 0), $3::smallint)
 sensors_history.fetch.huge.interval = SELECT * FROM beeeon.sensor_history_recent_aggregate($1::bigint, $2::numeric(20, 0), $3::smallint, $4::bigint, $5::bigint, $6::bigint)
+
+controls_recent.fetch = SELECT * FROM beeeon.controls_recent_state($1::bigint, $2::numeric(20, 0), $3::smallint)
