--- a/server-queries.ini
+++ b/server-queries.ini
@@ -61,7 +61,7 @@ devices.fetch.active.by.gateway   = SELECT * FROM beeeon.devices_active_by_gatew
 devices.fetch.inactive.by.gateway = SELECT * FROM beeeon.devices_inactive_by_gateway($1::bigint)
 devices.fetch.active.by.gateway.with.prefix = SELECT * FROM beeeon.devices_active_by_idrange_and_gateway($1::bigint, $2::numeric(20, 0), $3::numeric(20, 0))
 
-devices_properties.insert  = SELECT beeeon.device_properties_insert($1::bigint, $2::bigint, $3::smallint, $4::text, $5::text)
+devices_properties.insert  = SELECT beeeon.device_properties_insert($1::numeric, $2::bigint, $3::smallint, $4::text, $5::text)
 devices_properties.update  = SELECT beeeon.device_properties_update($3::numeric, $4::bigint, $5::smallint, $1::text, $2::text)
 devices_properties.remove  = SELECT beeeon.device_properties_remove($1::numeric, $2::bigint, $3::smallint)
 devices_properties.fetch   = SELECT * FROM beeeon.device_properties_by_key($1::numeric, $2::bigint, $3::smallint)
