gateways: allow to define and update timezone
The database ABI is changed for gateways.create and gateways.update calls.

Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -1,7 +1,7 @@
 [beeeon]
-gateways.create           = SELECT beeeon.gateways_insert($1::bigint, $2::varchar, $3::integer, $4::double precision, $5::double precision)
+gateways.create           = SELECT beeeon.gateways_insert($1::bigint, $2::varchar, $3::integer, $4::double precision, $5::double precision, $6::varchar(64))
 gateways.fetch.by.id      = SELECT * FROM beeeon.gateways_by_id($1::bigint)
-gateways.update           = SELECT beeeon.gateways_update($5::bigint, $1::varchar, $2::integer, $3::double precision, $4::double precision)
+gateways.update           = SELECT beeeon.gateways_update($1::bigint, $2::varchar, $3::integer, $4::double precision, $5::double precision, $6::varchar(64))
 gateways.fetch.accessible = SELECT * FROM beeeon.gateways_accessible($1::uuid)
 gateways_status.insert    = SELECT beeeon.gateways_status_insert_or_skip($1::bigint, $2::bigint, $3::varchar, $4::varchar(45))
 
