--- a/server-queries.ini
+++ b/server-queries.ini
@@ -68,7 +68,7 @@ devices_properties.remove  = SELECT beeeon.device_properties_remove($1::numeric,
 devices_properties.fetch   = SELECT * FROM beeeon.device_properties_by_key($1::numeric, $2::bigint, $3::smallint)
 devices_properties.fetch.by.device = SELECT * FROM beeeon.device_properties_by_device($1::numeric, $2::bigint)
 
-sensors_history.insert = SELECT beeeon.sensor_history_recent_insert($1::bigint, beeeon.to_device_id($2::numeric(20, 0)), $3::smallint, to_timestamp($4), $5)
+sensors_history.insert = SELECT beeeon.sensor_history_recent_insert($1::bigint, beeeon.to_device_id($2::numeric(20, 0)), $3::smallint, beeeon.as_utc_timestamp($4), $5)
 sensors_history.fetch = SELECT * FROM beeeon.sensor_history_last_value($1::bigint, $2::numeric(20, 0), $3::smallint)
 sensors_history.fetch.huge.interval = SELECT * FROM beeeon.sensor_history_recent_aggregate($1::bigint, $2::numeric(20, 0), $3::smallint, $4::bigint, $5::bigint, $6::bigint)
 
