--- a/server-queries.ini
+++ b/server-queries.ini
@@ -20,6 +20,7 @@ fcm_tokens.remove           = SELECT beeeon.fcm_tokens_remove($1::varchar)
 fcm_tokens.replace          = SELECT beeeon.fcm_tokens_replace($1::varchar, $2::varchar)
 fcm_tokens.fetch.by.id      = SELECT * FROM beeeon.fcm_tokens_by_id($1::varchar)
 fcm_tokens.fetch.by.user.id = SELECT * FROM beeeon.fcm_tokens_by_user_id($1::uuid)
+fcm_recipients.by_gateway   = SELECT * FROM beeeon.fcm_recipients_by_gateway($1::bigint)
 
 identities.create         = SELECT beeeon.identities_insert($1::uuid, $2::varchar)
 identities.fetch.by.id    = SELECT * FROM beeeon.identities_by_id($1::uuid)
