--- a/server-queries.ini
+++ b/server-queries.ini
@@ -70,7 +70,7 @@ devices_properties.fetch   = SELECT * FROM beeeon.device_properties_by_key($1::n
 devices_properties.fetch.by.device = SELECT * FROM beeeon.device_properties_by_device($1::numeric, $2::bigint)
 
 sensors_history.insert = SELECT beeeon.sensor_history_recent_insert($1::bigint, beeeon.to_device_id($2::numeric(20, 0)), $3::smallint, beeeon.as_utc_timestamp_us($4), $5)
-sensors_history.fetch = SELECT * FROM beeeon.sensor_history_last_value($1::bigint, $2::numeric(20, 0), $3::smallint)
+sensors_history.fetch = SELECT extract(epoch FROM at)::bigint, value FROM beeeon.sensor_history_last WHERE gateway_id = $1 AND device_id = beeeon.to_device_id($2) AND module_id = $3
 sensors_history.fetch.huge.interval = SELECT * FROM beeeon.sensor_history_recent_aggregate($1::bigint, $2::numeric(20, 0), $3::smallint, $4::bigint, $5::bigint, $6::bigint)
 
 controls_recent.fetch = SELECT * FROM beeeon.controls_recent_state($1::bigint, $2::numeric(20, 0), $3::smallint)
