api: accept locale when creating user
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -12,7 +12,7 @@ locations.fetch.by.id.and.gateway_id = SELECT * FROM beeeon.locations_by_id_and_
 locations.update          = SELECT beeeon.locations_update($1::uuid, $2::varchar)
 locations.remove          = SELECT beeeon.locations_remove($1::uuid)
 
-users.create              = SELECT beeeon.users_insert ($1::uuid, $2::varchar, $3::varchar, '')
+users.create              = SELECT beeeon.users_insert ($1::uuid, $2::varchar, $3::varchar, $4::varchar)
 users.fetch.by.id         = SELECT * FROM beeeon.users_by_id($1::uuid)
 
 fcm_tokens.create           = SELECT beeeon.fcm_tokens_insert($1::varchar, $2::uuid)
