--- a/server-queries.ini
+++ b/server-queries.ini
@@ -22,7 +22,7 @@ fcm_tokens.fetch.by.id      = SELECT t.token AS token, u.id AS user_id, u.first_
 fcm_tokens.fetch.by.user.id = SELECT token, user_id FROM beeeon.fcm_tokens WHERE user_id = $1
 fcm_recipients.by_gateway   = SELECT t.token AS token, t.user_id AS user_id, u.first_name AS user_first_name, u.last_name AS user_last_name, u.locale AS user_locale FROM beeeon.fcm_tokens AS t JOIN beeeon.verified_identities AS v ON t.user_id = v.user_id JOIN beeeon.roles_in_gateway AS r ON r.identity_id = v.identity_id JOIN beeeon.users AS u ON u.id = t.user_id WHERE r.gateway_id = $1
 
-identities.create         = SELECT beeeon.identities_insert($1::uuid, $2::varchar)
+identities.create         = INSERT INTO beeeon.identities (id, email) VALUES ($1, $2)
 identities.fetch.by.id    = SELECT * FROM beeeon.identities_by_id($1::uuid)
 identities.fetch.by.email = SELECT * FROM beeeon.identities_by_email($1::varchar)
 identities.remove         = SELECT beeeon.identities_remove($1::uuid)
