--- a/server-queries.ini
+++ b/server-queries.ini
@@ -1,5 +1,5 @@
 [beeeon]
-gateways.create           = SELECT beeeon.gateways_insert($1::bigint, $2::varchar, $3::integer, $4::double precision, $5::double precision, $6::varchar(64))
+gateways.create           = INSERT INTO beeeon.gateways (id, name, altitude, latitude, longitude, timezone) VALUES ($1::bigint, $2::varchar, $3::integer, $4::double precision, $5::double precision, $6::varchar(64))
 gateways.fetch.by.id      = SELECT * FROM beeeon.gateways_by_id($1::bigint)
 gateways.update           = SELECT beeeon.gateways_update($1::bigint, $2::varchar, $3::integer, $4::double precision, $5::double precision, $6::varchar(64))
 gateways.fetch.accessible = SELECT * FROM beeeon.gateways_accessible($1::uuid)
