api: use direct query instead of function verified_identities_by_id
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -28,7 +28,7 @@ identities.fetch.by.email = SELECT id, email FROM beeeon.identities WHERE email 
 identities.remove         = DELETE FROM beeeon.identities WHERE id = $1
 
 verified_identities.create         = INSERT INTO beeeon.verified_identities (id, identity_id, user_id, provider, picture, access_token) VALUES ($1, $2, $3, $4, $5, $6)
-verified_identities.fetch.by.id    = SELECT * FROM beeeon.verified_identities_by_id($1::uuid)
+verified_identities.fetch.by.id    = SELECT v.id AS id, v.identity_id AS identity_id, v.user_id AS user_id, v.provider AS provider, v.picture AS picture, v.access_token AS access_token, i.email AS identity_email, u.first_name AS user_first_name, u.last_name AS user_last_name FROM beeeon.verified_identities AS v JOIN beeeon.identities AS i ON v.identity_id = i.id JOIN beeeon.users AS u ON v.user_id = u.id WHERE v.id = $1 LIMIT 1
 verified_identities.fetch.by.email.and.provider = SELECT * FROM beeeon.verified_identities_by_email_and_provider($1::varchar, $2::varchar)
 verified_identities.fetch.by.email = SELECT * FROM beeeon.verified_identities_by_email($1::varchar)
 verified_identities.fetch.by.user  = SELECT * FROM beeeon.verified_identities_by_user($1::uuid)
