--- a/server-queries.ini
+++ b/server-queries.ini
@@ -36,7 +36,7 @@ verified_identities.update         = UPDATE beeeon.verified_identities SET pictu
 verified_identities.remove         = DELETE FROM beeeon.verified_identities WHERE id = $1
 
 roles_in_gateway.create              = INSERT INTO beeeon.roles_in_gateway (id, gateway_id, identity_id, level, created) VALUES ($1, $2, $3, $4, beeeon.as_utc_timestamp($5))
-roles_in_gateway.update              = SELECT beeeon.roles_in_gateway_update($1::uuid, $2::integer)
+roles_in_gateway.update              = UPDATE beeeon.roles_in_gateway SET level = $2 WHERE id = $1
 roles_in_gateway.fetch.by.id         = SELECT * FROM beeeon.roles_in_gateway_by_id($1::uuid)
 roles_in_gateway.fetch.by.gateway_id = SELECT * FROM beeeon.roles_in_gateway_by_gateway($1::bigint)
 roles_in_gateway.remove              = SELECT beeeon.roles_in_gateway_remove($1::uuid)
