api: use direct query instead of function locations_insert
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -5,7 +5,7 @@ gateways.update           = UPDATE beeeon.gateways SET name = $2::varchar, altit
 gateways.fetch.accessible = SELECT DISTINCT g.id AS id, g.name AS name, g.altitude AS altitude, g.latitude AS latitude, g.longitude AS longitude, g.timezone AS timezone, extract(epoch from s.at)::bigint AS last_changed, s.version AS version, host(s.ip)::varchar(45) AS ip FROM beeeon.gateways AS g JOIN beeeon.roles_in_gateway AS r ON g.id = r.gateway_id JOIN beeeon.verified_identities AS v ON v.identity_id = r.identity_id LEFT JOIN beeeon.gateways_status AS s ON s.gateway_id = g.id WHERE v.user_id = $1::uuid AND (s.at IS NULL OR s.at = beeeon.gateways_status_most_recent(g.id))
 gateways_status.insert    = WITH input AS (SELECT $1::bigint AS gateway_id, beeeon.as_utc_timestamp($2) AS at, $3::varchar(40) AS version, $4::inet AS ip), status AS (SELECT count(*) > 0 AS same FROM beeeon.gateways_status AS s, input WHERE s.gateway_id = input.gateway_id AND s.version = input.version AND s.ip = input.ip AND s.at = beeeon.gateways_status_most_recent(input.gateway_id)) INSERT INTO beeeon.gateways_status (gateway_id, at, version, ip) SELECT input.gateway_id, input.at, input.version, input.ip FROM input, status WHERE NOT status.same
 
-locations.create          = SELECT beeeon.locations_insert($1::uuid, $2::varchar, $3::bigint)
+locations.create          = INSERT INTO beeeon.locations (id, name, gateway_id) VALUES ($1::uuid, $2::varchar, $3::bigint)
 locations.fetch.by.id     = SELECT * FROM beeeon.locations_by_id($1::uuid)
 locations.fetch.by.gateway_id = SELECT * FROM beeeon.locations_by_gateway($1::bigint)
 locations.fetch.by.id.and.gateway_id = SELECT * FROM beeeon.locations_by_id_and_gateway($1::uuid, $2::bigint)
