--- a/server-queries.ini
+++ b/server-queries.ini
@@ -33,7 +33,7 @@ verified_identities.fetch.by.email.and.provider = SELECT v.id AS id, v.identity_
 verified_identities.fetch.by.email = SELECT v.id AS id, v.identity_id AS identity_id, v.user_id AS user_id, v.provider AS provider, v.picture AS picture, v.access_token AS access_token, i.email AS identity_email, u.first_name AS user_first_name, u.last_name AS user_last_name FROM beeeon.verified_identities AS v JOIN beeeon.identities AS i ON v.identity_id = i.id JOIN beeeon.users AS u ON v.user_id = u.id WHERE i.email = $1 ORDER BY provider
 verified_identities.fetch.by.user  = SELECT v.id AS id, v.identity_id AS identity_id, v.user_id AS user_id, v.provider AS provider, v.picture AS picture, v.access_token AS access_token, i.email AS identity_email, u.first_name AS user_first_name, u.last_name AS user_last_name FROM beeeon.verified_identities AS v JOIN beeeon.identities AS i ON v.identity_id = i.id JOIN beeeon.users AS u ON v.user_id = u.id WHERE u.id = $1 ORDER BY provider, id
 verified_identities.update         = UPDATE beeeon.verified_identities SET picture = $2, access_token = $3 WHERE id = $1
-verified_identities.remove         = SELECT beeeon.verified_identities_remove($1::uuid)
+verified_identities.remove         = DELETE FROM beeeon.verified_identities WHERE id = $1
 
 roles_in_gateway.create              = SELECT beeeon.roles_in_gateway_insert($1::uuid, $2::bigint, $3::uuid, $4::integer, $5::bigint)
 roles_in_gateway.update              = SELECT beeeon.roles_in_gateway_update($1::uuid, $2::integer)
