--- a/server-queries.ini
+++ b/server-queries.ini
@@ -10,7 +10,7 @@ locations.fetch.by.id     = SELECT id, name, gateway_id FROM beeeon.locations WH
 locations.fetch.by.gateway_id = SELECT id, name, gateway_id FROM beeeon.locations WHERE gateway_id = $1::bigint
 locations.fetch.by.id.and.gateway_id = SELECT id, name, gateway_id FROM beeeon.locations WHERE id = $1::uuid AND gateway_id = $2::bigint
 locations.update          = UPDATE beeeon.locations SET name = $2 WHERE id = $1
-locations.remove          = SELECT beeeon.locations_remove($1::uuid)
+locations.remove          = DELETE FROM beeeon.locations WHERE id = $1
 
 users.create              = SELECT beeeon.users_insert ($1::uuid, $2::varchar, $3::varchar, $4::varchar)
 users.fetch.by.id         = SELECT * FROM beeeon.users_by_id($1::uuid)
