api: use direct query instead of function gateways_by_id
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -1,6 +1,6 @@
 [beeeon]
 gateways.create           = INSERT INTO beeeon.gateways (id, name, altitude, latitude, longitude, timezone) VALUES ($1::bigint, $2::varchar, $3::integer, $4::double precision, $5::double precision, $6::varchar(64))
-gateways.fetch.by.id      = SELECT * FROM beeeon.gateways_by_id($1::bigint)
+gateways.fetch.by.id      = SELECT g.id AS id, g.name AS name, g.altitude AS altitude, g.latitude AS latitude, g.longitude AS longitude, g.timezone AS timezone, extract(epoch from s.at)::bigint AS last_changed, s.version AS version, host(s.ip)::varchar(45) AS ip FROM beeeon.gateways AS g LEFT JOIN beeeon.gateways_status AS s ON g.id = s.gateway_id WHERE g.id = $1::bigint AND (s.at IS NULL OR s.at = beeeon.gateways_status_most_recent(g.id)) LIMIT 1
 gateways.update           = SELECT beeeon.gateways_update($1::bigint, $2::varchar, $3::integer, $4::double precision, $5::double precision, $6::varchar(64))
 gateways.fetch.accessible = SELECT * FROM beeeon.gateways_accessible($1::uuid)
 gateways_status.insert    = SELECT beeeon.gateways_status_insert_or_skip($1::bigint, $2::bigint, $3::varchar, $4::varchar(45))
