--- a/server-queries.ini
+++ b/server-queries.ini
@@ -25,7 +25,7 @@ fcm_recipients.by_gateway   = SELECT t.token AS token, t.user_id AS user_id, u.f
 identities.create         = INSERT INTO beeeon.identities (id, email) VALUES ($1, $2)
 identities.fetch.by.id    = SELECT * FROM beeeon.identities WHERE id = $1
 identities.fetch.by.email = SELECT id, email FROM beeeon.identities WHERE email = $1 LIMIT 1
-identities.remove         = SELECT beeeon.identities_remove($1::uuid)
+identities.remove         = DELETE FROM beeeon.identities WHERE id = $1
 
 verified_identities.create         = SELECT beeeon.verified_identities_insert($1::uuid, $2::uuid , $3::uuid , $4::varchar, $5::varchar, $6::varchar)
 verified_identities.fetch.by.id    = SELECT * FROM beeeon.verified_identities_by_id($1::uuid)
