api: use direct query instead of function roles_in_gateway_is_registered
The query is slightly modified to not call COUNT(*) (which might be slow)
but to use EXISTS.

Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -43,7 +43,7 @@ roles_in_gateway.remove              = DELETE FROM beeeon.roles_in_gateway WHERE
 roles_in_gateway.remove.user         = DELETE FROM beeeon.roles_in_gateway WHERE identity_id IN (SELECT identity_id FROM beeeon.verified_identities WHERE user_id = $1) AND gateway_id = $2
 roles_in_gateway.remove.all          = DELETE FROM beeeon.roles_in_gateway WHERE gateway_id = $1
 roles_in_gateway.is.user             = SELECT EXISTS(SELECT 1 FROM beeeon.roles_in_gateway AS r JOIN beeeon.verified_identities AS v ON r.identity_id = v.identity_id JOIN beeeon.users AS u ON u.id = v.user_id WHERE r.id = $1 AND u.id = $2)
-roles_in_gateway.is.registered       = SELECT beeeon.roles_in_gateway_is_registered($1::bigint)
+roles_in_gateway.is.registered       = SELECT EXISTS(SELECT 1 FROM beeeon.roles_in_gateway WHERE gateway_id = $1)
 roles_in_gateway.has.only.given.level.except = SELECT beeeon.roles_in_gateway_has_only_given_level_except($1::integer, $2::bigint, $3::uuid)
 roles_in_gateway.can.see.identity = SELECT beeeon.roles_in_gateway_can_see_identity($1::uuid, $2::uuid)
 roles_in_gateway.can.see.verified_identity = SELECT beeeon.roles_in_gateway_can_see_verified_identity($1::uuid, $2::uuid)
