api: use direct query instead of function roles_in_gateway_remove
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -39,7 +39,7 @@ roles_in_gateway.create              = INSERT INTO beeeon.roles_in_gateway (id, 
 roles_in_gateway.update              = UPDATE beeeon.roles_in_gateway SET level = $2 WHERE id = $1
 roles_in_gateway.fetch.by.id         = SELECT r.id AS id, r.gateway_id AS gateway_id, i.id AS identity_id, r.level AS level, extract(epoch FROM r.created)::bigint AS created, i.email AS identity_email FROM beeeon.roles_in_gateway AS r JOIN beeeon.identities AS i ON r.identity_id = i.id WHERE r.id = $1 LIMIT 1
 roles_in_gateway.fetch.by.gateway_id = SELECT r.id AS id, r.gateway_id AS gateway_id, r.identity_id AS identity_id, r.level AS level, extract(epoch FROM r.created)::bigint AS created, i.email AS identity_email FROM beeeon.roles_in_gateway AS r JOIN beeeon.identities AS i ON r.identity_id = i.id WHERE r.gateway_id = $1
-roles_in_gateway.remove              = SELECT beeeon.roles_in_gateway_remove($1::uuid)
+roles_in_gateway.remove              = DELETE FROM beeeon.roles_in_gateway WHERE id = $1
 roles_in_gateway.remove.user         = SELECT beeeon.roles_in_gateway_remove_user($1::uuid, $2::bigint)
 roles_in_gateway.remove.all          = SELECT beeeon.roles_in_gateway_remove_gateway_all($1::bigint)
 roles_in_gateway.is.user             = SELECT beeeon.roles_in_gateway_is_user($1::uuid, $2::uuid)
