api: use direct query instead of function devices_by_id_and_gateway
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -58,7 +58,7 @@ legacy_gateways.fetch.accessible = SELECT DISTINCT g.id AS id, g.name AS name, g
 
 devices.create             = INSERT INTO beeeon.devices (id, gateway_id, location_id, name, type, refresh, battery, signal, first_seen, last_seen, active_since) VALUES (beeeon.to_device_id($1), $2, $3, $4, $5, $6, $7, $8, beeeon.as_utc_timestamp($9), beeeon.as_utc_timestamp($10), beeeon.as_utc_timestamp($11))
 devices.update             = UPDATE beeeon.devices SET location_id = $1, name = $2, type = $3, refresh = $4, battery = $5, signal = $6, last_seen = NOW(), active_since = beeeon.as_utc_timestamp($7) WHERE id = beeeon.to_device_id($8) AND gateway_id = $9
-devices.fetch.from.gateway = SELECT * FROM beeeon.devices_by_id_and_gateway($1::numeric, $2::bigint)
+devices.fetch.from.gateway = SELECT beeeon.from_device_id(id) AS id, gateway_id AS gateway_id, location_id AS location_id, name AS name, type AS type, refresh AS refresh, battery AS battery, signal AS signal, extract(epoch FROM first_seen)::bigint AS first_seen, extract(epoch FROM last_seen)::bigint AS last_seen, extract(epoch FROM active_since)::bigint AS active_since FROM beeeon.devices WHERE id = beeeon.to_device_id($1) AND gateway_id = $2 LIMIT 1
 devices.fetch.active.by.gateway   = SELECT * FROM beeeon.devices_active_by_gateway($1::bigint)
 devices.fetch.inactive.by.gateway = SELECT * FROM beeeon.devices_inactive_by_gateway($1::bigint)
 devices.fetch.active.by.gateway.with.prefix = SELECT * FROM beeeon.devices_active_by_idrange_and_gateway($1::bigint, $2::numeric(20, 0), $3::numeric(20, 0))
