api: use direct query instead of function locations_update
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -9,7 +9,7 @@ locations.create          = INSERT INTO beeeon.locations (id, name, gateway_id) 
 locations.fetch.by.id     = SELECT id, name, gateway_id FROM beeeon.locations WHERE id = $1 LIMIT 1
 locations.fetch.by.gateway_id = SELECT id, name, gateway_id FROM beeeon.locations WHERE gateway_id = $1::bigint
 locations.fetch.by.id.and.gateway_id = SELECT id, name, gateway_id FROM beeeon.locations WHERE id = $1::uuid AND gateway_id = $2::bigint
-locations.update          = SELECT beeeon.locations_update($1::uuid, $2::varchar)
+locations.update          = UPDATE beeeon.locations SET name = $2 WHERE id = $1
 locations.remove          = SELECT beeeon.locations_remove($1::uuid)
 
 users.create              = SELECT beeeon.users_insert ($1::uuid, $2::varchar, $3::varchar, $4::varchar)
