--- a/server-queries.ini
+++ b/server-queries.ini
@@ -65,7 +65,7 @@ devices.fetch.active.by.gateway.with.prefix = SELECT beeeon.from_device_id(id) A
 
 devices_properties.insert  = INSERT INTO beeeon.device_properties(device_id, gateway_id, key, value, params) VALUES (beeeon.to_device_id($1), $2, $3, $4, $5)
 devices_properties.update  = UPDATE beeeon.device_properties SET value = $1, params = $2 WHERE device_id = beeeon.to_device_id($3) AND gateway_id = $4 AND key = $5
-devices_properties.remove  = SELECT beeeon.device_properties_remove($1::numeric, $2::bigint, $3::smallint)
+devices_properties.remove  = DELETE FROM beeeon.device_properties WHERE device_id = beeeon.to_device_id($1) AND gateway_id = $2 AND key = $3
 devices_properties.fetch   = SELECT * FROM beeeon.device_properties_by_key($1::numeric, $2::bigint, $3::smallint)
 devices_properties.fetch.by.device = SELECT * FROM beeeon.device_properties_by_device($1::numeric, $2::bigint)
 
