api: use direct query instead of function fcm_tokens_remove
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -16,7 +16,7 @@ users.create              = INSERT INTO beeeon.users (id, first_name, last_name,
 users.fetch.by.id         = SELECT id, first_name, last_name, locale FROM beeeon.users WHERE id = $1 LIMIT 1
 
 fcm_tokens.create           = INSERT INTO beeeon.fcm_tokens (token, user_id) VALUES ($1, $2)
-fcm_tokens.remove           = SELECT beeeon.fcm_tokens_remove($1::varchar)
+fcm_tokens.remove           = DELETE FROM beeeon.fcm_tokens WHERE token = $1
 fcm_tokens.replace          = SELECT beeeon.fcm_tokens_replace($1::varchar, $2::varchar)
 fcm_tokens.fetch.by.id      = SELECT * FROM beeeon.fcm_tokens_by_id($1::varchar)
 fcm_tokens.fetch.by.user.id = SELECT * FROM beeeon.fcm_tokens_by_user_id($1::uuid)
