api: use direct query instead of function roles_in_gateway_remove_gateway_all
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -41,7 +41,7 @@ roles_in_gateway.fetch.by.id         = SELECT r.id AS id, r.gateway_id AS gatewa
 roles_in_gateway.fetch.by.gateway_id = SELECT r.id AS id, r.gateway_id AS gateway_id, r.identity_id AS identity_id, r.level AS level, extract(epoch FROM r.created)::bigint AS created, i.email AS identity_email FROM beeeon.roles_in_gateway AS r JOIN beeeon.identities AS i ON r.identity_id = i.id WHERE r.gateway_id = $1
 roles_in_gateway.remove              = DELETE FROM beeeon.roles_in_gateway WHERE id = $1
 roles_in_gateway.remove.user         = DELETE FROM beeeon.roles_in_gateway WHERE identity_id IN (SELECT identity_id FROM beeeon.verified_identities WHERE user_id = $1) AND gateway_id = $2
-roles_in_gateway.remove.all          = SELECT beeeon.roles_in_gateway_remove_gateway_all($1::bigint)
+roles_in_gateway.remove.all          = DELETE FROM beeeon.roles_in_gateway WHERE gateway_id = $1
 roles_in_gateway.is.user             = SELECT beeeon.roles_in_gateway_is_user($1::uuid, $2::uuid)
 roles_in_gateway.is.registered       = SELECT beeeon.roles_in_gateway_is_registered($1::bigint)
 roles_in_gateway.has.only.given.level.except = SELECT beeeon.roles_in_gateway_has_only_given_level_except($1::integer, $2::bigint, $3::uuid)
