--- a/server-queries.ini
+++ b/server-queries.ini
@@ -15,7 +15,7 @@ locations.remove          = DELETE FROM beeeon.locations WHERE id = $1
 users.create              = INSERT INTO beeeon.users (id, first_name, last_name, locale) VALUES ($1::uuid, $2::varchar, $3::varchar, $4::varchar)
 users.fetch.by.id         = SELECT id, first_name, last_name, locale FROM beeeon.users WHERE id = $1 LIMIT 1
 
-fcm_tokens.create           = SELECT beeeon.fcm_tokens_insert($1::varchar, $2::uuid)
+fcm_tokens.create           = INSERT INTO beeeon.fcm_tokens (token, user_id) VALUES ($1, $2)
 fcm_tokens.remove           = SELECT beeeon.fcm_tokens_remove($1::varchar)
 fcm_tokens.replace          = SELECT beeeon.fcm_tokens_replace($1::varchar, $2::varchar)
 fcm_tokens.fetch.by.id      = SELECT * FROM beeeon.fcm_tokens_by_id($1::varchar)
