api: use direct query instead of function roles_in_gateway_by_gateway
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -38,7 +38,7 @@ verified_identities.remove         = DELETE FROM beeeon.verified_identities WHER
 roles_in_gateway.create              = INSERT INTO beeeon.roles_in_gateway (id, gateway_id, identity_id, level, created) VALUES ($1, $2, $3, $4, beeeon.as_utc_timestamp($5))
 roles_in_gateway.update              = UPDATE beeeon.roles_in_gateway SET level = $2 WHERE id = $1
 roles_in_gateway.fetch.by.id         = SELECT r.id AS id, r.gateway_id AS gateway_id, i.id AS identity_id, r.level AS level, extract(epoch FROM r.created)::bigint AS created, i.email AS identity_email FROM beeeon.roles_in_gateway AS r JOIN beeeon.identities AS i ON r.identity_id = i.id WHERE r.id = $1 LIMIT 1
-roles_in_gateway.fetch.by.gateway_id = SELECT * FROM beeeon.roles_in_gateway_by_gateway($1::bigint)
+roles_in_gateway.fetch.by.gateway_id = SELECT r.id AS id, r.gateway_id AS gateway_id, r.identity_id AS identity_id, r.level AS level, extract(epoch FROM r.created)::bigint AS created, i.email AS identity_email FROM beeeon.roles_in_gateway AS r JOIN beeeon.identities AS i ON r.identity_id = i.id WHERE r.gateway_id = $1
 roles_in_gateway.remove              = SELECT beeeon.roles_in_gateway_remove($1::uuid)
 roles_in_gateway.remove.user         = SELECT beeeon.roles_in_gateway_remove_user($1::uuid, $2::bigint)
 roles_in_gateway.remove.all          = SELECT beeeon.roles_in_gateway_remove_gateway_all($1::bigint)
