--- a/server-queries.ini
+++ b/server-queries.ini
@@ -27,7 +27,7 @@ identities.fetch.by.id    = SELECT * FROM beeeon.identities WHERE id = $1
 identities.fetch.by.email = SELECT id, email FROM beeeon.identities WHERE email = $1 LIMIT 1
 identities.remove         = DELETE FROM beeeon.identities WHERE id = $1
 
-verified_identities.create         = SELECT beeeon.verified_identities_insert($1::uuid, $2::uuid , $3::uuid , $4::varchar, $5::varchar, $6::varchar)
+verified_identities.create         = INSERT INTO beeeon.verified_identities (id, identity_id, user_id, provider, picture, access_token) VALUES ($1, $2, $3, $4, $5, $6)
 verified_identities.fetch.by.id    = SELECT * FROM beeeon.verified_identities_by_id($1::uuid)
 verified_identities.fetch.by.email.and.provider = SELECT * FROM beeeon.verified_identities_by_email_and_provider($1::varchar, $2::varchar)
 verified_identities.fetch.by.email = SELECT * FROM beeeon.verified_identities_by_email($1::varchar)
