--- a/server-queries.ini
+++ b/server-queries.ini
@@ -6,7 +6,7 @@ gateways.fetch.accessible = SELECT DISTINCT g.id AS id, g.name AS name, g.altitu
 gateways_status.insert    = WITH input AS (SELECT $1::bigint AS gateway_id, beeeon.as_utc_timestamp($2) AS at, $3::varchar(40) AS version, $4::inet AS ip), status AS (SELECT count(*) > 0 AS same FROM beeeon.gateways_status AS s, input WHERE s.gateway_id = input.gateway_id AND s.version = input.version AND s.ip = input.ip AND s.at = beeeon.gateways_status_most_recent(input.gateway_id)) INSERT INTO beeeon.gateways_status (gateway_id, at, version, ip) SELECT input.gateway_id, input.at, input.version, input.ip FROM input, status WHERE NOT status.same
 
 locations.create          = INSERT INTO beeeon.locations (id, name, gateway_id) VALUES ($1::uuid, $2::varchar, $3::bigint)
-locations.fetch.by.id     = SELECT * FROM beeeon.locations_by_id($1::uuid)
+locations.fetch.by.id     = SELECT id, name, gateway_id FROM beeeon.locations WHERE id = $1 LIMIT 1
 locations.fetch.by.gateway_id = SELECT * FROM beeeon.locations_by_gateway($1::bigint)
 locations.fetch.by.id.and.gateway_id = SELECT * FROM beeeon.locations_by_id_and_gateway($1::uuid, $2::bigint)
 locations.update          = SELECT beeeon.locations_update($1::uuid, $2::varchar)
