api: use direct query instead of function locations_by_gateway
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -7,7 +7,7 @@ gateways_status.insert    = WITH input AS (SELECT $1::bigint AS gateway_id, beee
 
 locations.create          = INSERT INTO beeeon.locations (id, name, gateway_id) VALUES ($1::uuid, $2::varchar, $3::bigint)
 locations.fetch.by.id     = SELECT id, name, gateway_id FROM beeeon.locations WHERE id = $1 LIMIT 1
-locations.fetch.by.gateway_id = SELECT * FROM beeeon.locations_by_gateway($1::bigint)
+locations.fetch.by.gateway_id = SELECT id, name, gateway_id FROM beeeon.locations WHERE gateway_id = $1::bigint
 locations.fetch.by.id.and.gateway_id = SELECT * FROM beeeon.locations_by_id_and_gateway($1::uuid, $2::bigint)
 locations.update          = SELECT beeeon.locations_update($1::uuid, $2::varchar)
 locations.remove          = SELECT beeeon.locations_remove($1::uuid)
