--- a/server-queries.ini
+++ b/server-queries.ini
@@ -13,7 +13,7 @@ locations.update          = UPDATE beeeon.locations SET name = $2 WHERE id = $1
 locations.remove          = DELETE FROM beeeon.locations WHERE id = $1
 
 users.create              = INSERT INTO beeeon.users (id, first_name, last_name, locale) VALUES ($1::uuid, $2::varchar, $3::varchar, $4::varchar)
-users.fetch.by.id         = SELECT * FROM beeeon.users_by_id($1::uuid)
+users.fetch.by.id         = SELECT id, first_name, last_name, locale FROM beeeon.users WHERE id = $1 LIMIT 1
 
 fcm_tokens.create           = SELECT beeeon.fcm_tokens_insert($1::varchar, $2::uuid)
 fcm_tokens.remove           = SELECT beeeon.fcm_tokens_remove($1::varchar)
