--- a/server-queries.ini
+++ b/server-queries.ini
@@ -64,7 +64,7 @@ devices.fetch.inactive.by.gateway = SELECT beeeon.from_device_id(id) AS id, gate
 devices.fetch.active.by.gateway.with.prefix = SELECT beeeon.from_device_id(id) AS id, gateway_id AS gateway_id, location_id AS location_id, name AS name, type AS type, refresh AS refresh, battery AS battery, signal AS signal, extract(epoch FROM first_seen)::bigint AS first_seen, extract(epoch FROM last_seen)::bigint AS last_seen, extract(epoch FROM active_since)::bigint AS active_since FROM beeeon.devices WHERE id >= beeeon.to_device_id($2) AND id <= beeeon.to_device_id($3) AND active_since IS NOT NULL AND gateway_id = $1;
 
 devices_properties.insert  = INSERT INTO beeeon.device_properties(device_id, gateway_id, key, value, params) VALUES (beeeon.to_device_id($1), $2, $3, $4, $5)
-devices_properties.update  = SELECT beeeon.device_properties_update($3::numeric, $4::bigint, $5::smallint, $1::text, $2::text)
+devices_properties.update  = UPDATE beeeon.device_properties SET value = $1, params = $2 WHERE device_id = beeeon.to_device_id($3) AND gateway_id = $4 AND key = $5
 devices_properties.remove  = SELECT beeeon.device_properties_remove($1::numeric, $2::bigint, $3::smallint)
 devices_properties.fetch   = SELECT * FROM beeeon.device_properties_by_key($1::numeric, $2::bigint, $3::smallint)
 devices_properties.fetch.by.device = SELECT * FROM beeeon.device_properties_by_device($1::numeric, $2::bigint)
