--- a/server-queries.ini
+++ b/server-queries.ini
@@ -69,7 +69,7 @@ devices_properties.remove  = DELETE FROM beeeon.device_properties WHERE device_i
 devices_properties.fetch   = SELECT beeeon.from_device_id(device_id), gateway_id, key, value, params FROM beeeon.device_properties WHERE device_id = beeeon.to_device_id($1) AND gateway_id = $2 AND key = $3
 devices_properties.fetch.by.device = SELECT beeeon.from_device_id(device_id), gateway_id, key, value, params FROM beeeon.device_properties WHERE device_id = beeeon.to_device_id($1) AND gateway_id = $2
 
-sensors_history.insert = SELECT beeeon.sensor_history_recent_insert($1::bigint, beeeon.to_device_id($2::numeric(20, 0)), $3::smallint, beeeon.as_utc_timestamp_us($4), $5)
+sensors_history.insert = INSERT INTO beeeon.sensor_history_recent (gateway_id, device_id, module_id, at, value) VALUES ($1::bigint, beeeon.to_device_id($2::numeric(20, 0)), $3::smallint, beeeon.as_utc_timestamp_us($4), $5::real)
 sensors_history.fetch = SELECT extract(epoch FROM at)::bigint, value FROM beeeon.sensor_history_last WHERE gateway_id = $1 AND device_id = beeeon.to_device_id($2) AND module_id = $3
 sensors_history.fetch.huge.interval = SELECT * FROM beeeon.sensor_history_recent_aggregate($1::bigint, $2::numeric(20, 0), $3::smallint, $4::bigint, $5::bigint, $6::bigint)
 
