--- a/server-queries.ini
+++ b/server-queries.ini
@@ -44,7 +44,7 @@ roles_in_gateway.remove.user         = DELETE FROM beeeon.roles_in_gateway WHERE
 roles_in_gateway.remove.all          = DELETE FROM beeeon.roles_in_gateway WHERE gateway_id = $1
 roles_in_gateway.is.user             = SELECT EXISTS(SELECT 1 FROM beeeon.roles_in_gateway AS r JOIN beeeon.verified_identities AS v ON r.identity_id = v.identity_id JOIN beeeon.users AS u ON u.id = v.user_id WHERE r.id = $1 AND u.id = $2)
 roles_in_gateway.is.registered       = SELECT EXISTS(SELECT 1 FROM beeeon.roles_in_gateway WHERE gateway_id = $1)
-roles_in_gateway.has.only.given.level.except = SELECT beeeon.roles_in_gateway_has_only_given_level_except($1::integer, $2::bigint, $3::uuid)
+roles_in_gateway.has.only.given.level.except = SELECT EXISTS(SELECT 1 FROM beeeon.roles_in_gateway WHERE level > $1 AND gateway_id = $2 AND identity_id NOT IN (SELECT identity_id FROM beeeon.verified_identities WHERE user_id = $3))
 roles_in_gateway.can.see.identity = SELECT beeeon.roles_in_gateway_can_see_identity($1::uuid, $2::uuid)
 roles_in_gateway.can.see.verified_identity = SELECT beeeon.roles_in_gateway_can_see_verified_identity($1::uuid, $2::uuid)
 roles_in_gateway.fetch.access_level  = SELECT beeeon.roles_in_gateway_access_level($1::bigint, $2::uuid)
