--- a/server-queries.ini
+++ b/server-queries.ini
@@ -12,7 +12,7 @@ locations.fetch.by.id.and.gateway_id = SELECT id, name, gateway_id FROM beeeon.l
 locations.update          = UPDATE beeeon.locations SET name = $2 WHERE id = $1
 locations.remove          = DELETE FROM beeeon.locations WHERE id = $1
 
-users.create              = SELECT beeeon.users_insert ($1::uuid, $2::varchar, $3::varchar, $4::varchar)
+users.create              = INSERT INTO beeeon.users (id, first_name, last_name, locale) VALUES ($1::uuid, $2::varchar, $3::varchar, $4::varchar)
 users.fetch.by.id         = SELECT * FROM beeeon.users_by_id($1::uuid)
 
 fcm_tokens.create           = SELECT beeeon.fcm_tokens_insert($1::varchar, $2::uuid)
