api: use direct query instead of function device_properties_by_key
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -66,7 +66,7 @@ devices.fetch.active.by.gateway.with.prefix = SELECT beeeon.from_device_id(id) A
 devices_properties.insert  = INSERT INTO beeeon.device_properties(device_id, gateway_id, key, value, params) VALUES (beeeon.to_device_id($1), $2, $3, $4, $5)
 devices_properties.update  = UPDATE beeeon.device_properties SET value = $1, params = $2 WHERE device_id = beeeon.to_device_id($3) AND gateway_id = $4 AND key = $5
 devices_properties.remove  = DELETE FROM beeeon.device_properties WHERE device_id = beeeon.to_device_id($1) AND gateway_id = $2 AND key = $3
-devices_properties.fetch   = SELECT * FROM beeeon.device_properties_by_key($1::numeric, $2::bigint, $3::smallint)
+devices_properties.fetch   = SELECT beeeon.from_device_id(device_id), gateway_id, key, value, params FROM beeeon.device_properties WHERE device_id = beeeon.to_device_id($1) AND gateway_id = $2 AND key = $3
 devices_properties.fetch.by.device = SELECT * FROM beeeon.device_properties_by_device($1::numeric, $2::bigint)
 
 sensors_history.insert = SELECT beeeon.sensor_history_recent_insert($1::bigint, beeeon.to_device_id($2::numeric(20, 0)), $3::smallint, beeeon.as_utc_timestamp_us($4), $5)
