api: use direct query instead of function fcm_tokens_by_user_id
Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -19,7 +19,7 @@ fcm_tokens.create           = INSERT INTO beeeon.fcm_tokens (token, user_id) VAL
 fcm_tokens.remove           = DELETE FROM beeeon.fcm_tokens WHERE token = $1
 fcm_tokens.replace          = WITH input AS (SELECT $1 AS token_from, $2 AS token_to), do_insert AS (INSERT INTO beeeon.fcm_tokens SELECT input.token_to, user_id FROM beeeon.fcm_tokens, input WHERE token = input.token_from) DELETE FROM beeeon.fcm_tokens WHERE token IN (SELECT token_from FROM input)
 fcm_tokens.fetch.by.id      = SELECT t.token AS token, u.id AS user_id, u.first_name AS user_first_name, u.last_name AS user_last_name, u.locale AS user_locale FROM beeeon.fcm_tokens AS t JOIN beeeon.users AS u ON t.user_id = u.id WHERE t.token = $1 LIMIT 1
-fcm_tokens.fetch.by.user.id = SELECT * FROM beeeon.fcm_tokens_by_user_id($1::uuid)
+fcm_tokens.fetch.by.user.id = SELECT token, user_id FROM beeeon.fcm_tokens WHERE user_id = $1
 fcm_recipients.by_gateway   = SELECT * FROM beeeon.fcm_recipients_by_gateway($1::bigint)
 
 identities.create         = SELECT beeeon.identities_insert($1::uuid, $2::varchar)
