api: use direct query instead of function fcm_tokens_replace
The function beeeon.fcm_tokens_replace was probably buggy in some
contexts because it refers the fcm_tokens table without namespace
prefix "beeeon".

Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/server-queries.ini
+++ b/server-queries.ini
@@ -17,7 +17,7 @@ users.fetch.by.id         = SELECT id, first_name, last_name, locale FROM beeeon
 
 fcm_tokens.create           = INSERT INTO beeeon.fcm_tokens (token, user_id) VALUES ($1, $2)
 fcm_tokens.remove           = DELETE FROM beeeon.fcm_tokens WHERE token = $1
-fcm_tokens.replace          = SELECT beeeon.fcm_tokens_replace($1::varchar, $2::varchar)
+fcm_tokens.replace          = WITH input AS (SELECT $1 AS token_from, $2 AS token_to), do_insert AS (INSERT INTO beeeon.fcm_tokens SELECT input.token_to, user_id FROM beeeon.fcm_tokens, input WHERE token = input.token_from) DELETE FROM beeeon.fcm_tokens WHERE token IN (SELECT token_from FROM input)
 fcm_tokens.fetch.by.id      = SELECT * FROM beeeon.fcm_tokens_by_id($1::varchar)
 fcm_tokens.fetch.by.user.id = SELECT * FROM beeeon.fcm_tokens_by_user_id($1::uuid)
 fcm_recipients.by_gateway   = SELECT * FROM beeeon.fcm_recipients_by_gateway($1::bigint)
